2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile: Install the assemblies to the correct directory.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs: Implemented
	  SetActiveThread. Ignore target events coming from non-stopped
	  threads.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs, Makefile: Implement
	  support for modifying variable values and disassembling files.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs: Track api changes.
	* DebuggerController.cs: Use tcp by default. Fire target even after
	  forcing the debugger to stop.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Backend.Mdb.mdp, DebuggerController.cs, Makefile:
	  Enable unix channel support.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs: Implement GetThreads and
	  GetProcesses.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs, IDebuggerServer.cs,
	  DebuggerController.cs: Implemented detach.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs, IDebuggerServer.cs,
	  DebuggerController.cs, MonoDebuggerSessionFactory.cs: Implemented
	  support for attach to process, disassemble.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerController.cs: Added a timeout in the Exit method.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* mono.debugging.backend.mdb.pc.in: Added missing file.

2008-05-27  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs,
	  Mono.Debugging.Backend.Mdb.mdp, IDebuggerServer.cs,
	  DebuggerController.cs, Makefile: Track api changes. Properly
	  redirect debugger output. Implemented support for adding
	  breakpoints while the target process is running, it seems to kinda
	  work.
